--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AMC Trainer</title>
-    <meta name="description" content="A FREE interactive trainer which generates math problems for AMC 8/10/12/AIME.">
+    <meta name="description" content="A FREE interactive trainer which generates math problems for AMC 10/12/AIME.">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,7 +16,6 @@
                 <option value="test">Practice Test</option>
             </select>
             <button class="btn" onclick="openSettings()">Settings</button>
-            <button class="btn" onclick="openProgress()">Progress</button>
             <button class="btn" id="drawToggle" onclick="toggleDraw()">Draw: Off</button>
         </div>
         <div style="display: flex; gap: 12px; align-items: center;">
@@ -30,7 +29,7 @@
         </div>
     </div>
 
-    <div class="problem-container">
+    <div class="problem-container" id="problemContainer">
         <canvas class="canvas-overlay" id="drawCanvas"></canvas>
         <div class="problem-id" id="problemId">Loading...</div>
         <div class="problem-text" id="problemText">Loading problem...</div>
@@ -77,9 +76,6 @@
                 <label>Competition Levels</label>
                 <div class="checkbox-group">
                     <label class="checkbox-item">
-                        <input type="checkbox" value="8" checked onchange="updateSettings()"> AMC 8
-                    </label>
-                    <label class="checkbox-item">
                         <input type="checkbox" value="10" checked onchange="updateSettings()"> AMC 10
                     </label>
                     <label class="checkbox-item">
@@ -117,33 +113,6 @@
                     <input type="number" id="aimeProblemMax" value="15" min="1" max="15" onchange="updateSettings()">
                 </div>
             </div>
-        </div>
-    </div>
-
-    <!-- Progress Modal -->
-    <div class="modal" id="progressModal">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h2>Your Progress</h2>
-                <button class="close-btn" onclick="closeProgress()">×</button>
-            </div>
-
-            <div class="matrix-legend">
-                <div class="legend-item">
-                    <div class="legend-box correct"></div>
-                    <span>Correct</span>
-                </div>
-                <div class="legend-item">
-                    <div class="legend-box incorrect"></div>
-                    <span>Incorrect</span>
-                </div>
-                <div class="legend-item">
-                    <div class="legend-box" style="background: white; border-color: #e0e0e0;"></div>
-                    <span>Not Attempted</span>
-                </div>
-            </div>
-
-            <div id="progressMatrix"></div>
         </div>
     </div>
 
